Redirect to contact location hash

--- a/labtasks/base/templates/base/index.html
+++ b/labtasks/base/templates/base/index.html
@@ -96,4 +96,11 @@
 </section>
 {% load static %}
 <script src="{% static 'index.js' %}"></script>
+
+{% if scroll_to_contact %}
+    <script>
+        window.location.hash = "#contact";
+    </script>
+{% endif %}
+
 {% endblock %}
