--- a/labtasks/base/templates/base/index.html
+++ b/labtasks/base/templates/base/index.html
@@ -7,8 +7,8 @@
         <h1>LaboraTasks,<br>a laboratory tasks manager</h1>
         <p>Streamline your lab workflow and manage tasks efficiently.</p>
         <div class="buttons">
-            <a class="register" href="{% url 'user_authentication:register' %}">Register</a>
-            <a class="login" href="{% url 'user_authentication:login' %}">Log in</a>
+            <a class="register" href="{% url 'user_authentication:register_page' %}">Register</a>
+            <a class="login" href="{% url 'user_authentication:login_page' %}">Log in</a>
         </div>
     </div>
     {% comment %} Slideshow {% endcomment %}
