--- a/labtasks/templates/navbar.html
+++ b/labtasks/templates/navbar.html
@@ -7,13 +7,15 @@
     </div>
     <ul class="nav-options">
         <div class="item-gr5">
-        {% comment %} <div class="{% if user.is_authenticated %}item-gr3{% else %}item-gr1{% endif %}"> {% endcomment %}
-            <li><a class="item1" href="{% url 'user_authentication:register_page' %}">Register</a></li>
-            <li>/</li>
-            <li><a class="item2" href="{% url 'user_authentication:login_page' %}">Log in</a></li>
-            {% comment %} ADD IF USER.ISAUTH {% endcomment %}
-            <li>/</li>
-            <li><a class="item5" href="{% url 'labspaces:your_labspaces' %}">My Labspaces</a></li>
+            {% if request.user.is_authenticated %}
+                <li><a class="item5" href="{% url 'labspaces:your_labspaces' %}">My Labspaces</a></li>
+                <li>/</li>
+                <li><a class="item2" href="{% url 'user_authentication:logout_user' %}">Log out</a></li>
+            {% else %}
+                <li><a class="item1" href="{% url 'user_authentication:register_page' %}">Register</a></li>
+                <li>/</li>
+                <li><a class="item2" href="{% url 'user_authentication:login_page' %}">Log in</a></li>
+            {% endif %}
 
         </div>
         <div class="item-gr2">
