--- a/labtasks/templates/navbar.html
+++ b/labtasks/templates/navbar.html
@@ -10,7 +10,7 @@
             {% if request.user.is_authenticated %}
                 <li><a class="item5" href="{% url 'labspaces:your_labspaces' %}">My Labspaces</a></li>
                 <li>/</li>
-                <li><a class="item2" href="{% url 'user_authentication:logout_user' %}">Log out</a></li>
+                <li><a class="item2" href="{% url 'user_authentication:logout_user' %}">Log out (<span style="color: var(--secondary-text-col);">{{ user.username }}</span>)</a></li>
             {% else %}
                 <li><a class="item1" href="{% url 'user_authentication:register_page' %}">Register</a></li>
                 <li>/</li>
