--- a/labtasks/static/styles/labspaces.css
+++ b/labtasks/static/styles/labspaces.css
@@ -281,6 +281,7 @@
 #labspace-messages .message-body {
     color: var(--secondary-text-col);
     font-size: 1em;
+    white-space: pre-wrap;
 }
 
 #labspace-messages .message-timestamp {
@@ -291,6 +292,68 @@
 
 .no-messages h2 {
     font-size: 1em;
+}
+
+#add-message-sep {
+    margin-top: 6em;
+    margin-bottom: 6em;
+    width: 85%;
+    border: 1px solid var(--primary-shadow);
+    border-radius: 10px;
+    box-shadow: 0px 0px 0px 5px rgba(0,0,0,0.3);
+}
+
+#add-message {
+    margin: auto;
+    text-align: center;
+    align-items: center;
+    width: 75%;
+    font-size: 2em;
+}
+#add-message h2 {
+    margin-top: -0.5em;
+}
+
+#add-message .post-message-form {
+    margin: auto;
+    text-align: center;
+    width: 75%;
+}
+
+#add-message .post-message-form textarea {
+    width: 100%;
+    padding: 0.75em;
+    text-align: left;
+    margin-top: 0.5em;
+    box-sizing: border-box;
+    border: 4px solid var(--primary-text-col);
+    border-radius: 10px;
+    font-size: 0.65em;
+}
+#add-message th {
+    display: none
+}
+
+
+#post-message-btn {
+    margin-top: 1em;
+    width: 100px;
+    border-radius: 10px;
+    font-size: 1em;
+    padding: 0.5em;
+    border: 4px solid var(--primary-text-col);
+    transition: 0.5s;
+    cursor: pointer;
+    background: linear-gradient(to right, var(--accent-yellow), var(--accent-pink));
+    color:transparent;
+    background-clip: text;
+}
+
+#post-message-btn:hover {
+    color: var(--secondary-text-col);
+    background: var(--primary-shadow);
+    text-decoration: none;
+    border-radius: 40px 10px;
 }
 
 /* Delete labspace */
